nextcloud/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: nextcloud-headers
  namespace: storage
spec:
  headers:
    stsSeconds: 15552000
    stsIncludeSubdomains: true
    stsPreload: true
    forceSTSHeader: true
      

      # - "traefik.http.middlewares.nextcloudHeader.headers.stsSeconds=15552000"
      # - "traefik.http.middlewares.nextcloudHeader.headers.stsIncludeSubdomains=true"
      # - "traefik.http.middlewares.nextcloudHeader.headers.stsPreload=true"
      # - "traefik.http.middlewares.nextcloudHeader.headers.forceSTSHeader=true"
