nextcloud/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    name: nextcloud
spec:
    routes:
        - kind: Rule
          match: ENC[AES256_GCM,data:zHSAY+Sq9XvgxGvNu3uL0Zx1FD7VcIaT5PP+t1Y=,iv:N5vMk2xTtDJQWxStT2dwcXgijvMqjYpQ1mJnX1dOJPc=,tag:RPqxNLEBoyCnDeTkFeTHCA==,type:str]
          middlewares:
          - name: nextcloud-headers
            namespace: storage
          services:
            - name: nextcloud
              port: 80
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age: []
    lastmodified: "2023-09-05T19:25:58Z"
    mac: ENC[AES256_GCM,data:X+stepi0v21yGN4hbGi1fToX3+Wsne/5rDxKXSsTOL8Wkue5LXF/XI5Xa2KBTJ67+ejBnkSxOpDxDmI/QFSNER/xIcbFu2mQ48Hpr8PSdb6NGbKHFKpjeCChxhhadXAyZuqXSGq8+Zohpzz1434ZbUBM/F0iD93brEKmzsq0y+8=,iv:T/pZYeZXrPFiWL1zT5LBCYxKqyBp2dr5WOMZesc7d0Q=,tag:/RBTwC3WiVMik4tiJO75gg==,type:str]
    pgp:
        - created_at: "2023-09-05T19:25:57Z"
          enc: |
            -----BEGIN PGP MESSAGE-----

            hQIMAyyGYy7YCFAQARAAlywW4EsDQEhEq2RW0uu4FzpskpX4Wn6OYFnn0btAEsvl
[...]
            3v+SLzg1DXck
            =RN+K
            -----END PGP MESSAGE-----
          fp: 75C3F62D6A9AA2165875F5C680A364E41D3C47AF
    encrypted_regex: ^(match)$
    version: 3.7.3
